--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ authors = [
 ]
 classifiers = [
     "Development Status :: 4 - Beta",
+    "Framework :: Robot Framework",  # 更改为标准分类器
     "Programming Language :: Python :: 3",
     "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
@@ -24,6 +25,7 @@ classifiers = [
     "Operating System :: OS Independent",
     "Topic :: Communications :: Chat",
     "Topic :: Internet :: WWW/HTTP",
+    "Intended Audience :: Developers"
 ]
 dependencies = [
     "nonebot2>=2.0.0",
